--- a/Final Fantasy Mystic Quest (SNES)/Wiki/Final Fantasy Mystic Quest (SNES) - RAM map.wikitext
+++ b/Final Fantasy Mystic Quest (SNES)/Wiki/Final Fantasy Mystic Quest (SNES) - RAM map.wikitext
@@ -8,20 +8,70 @@
 
 ==RAM Map==
 
+Note: Name is 8 characters in English, but 6 characters in Japanese, French, and German versions.
+
 {| class="wikitable"
 !  Address  !!  Size  !!  Category  !!  Description
+|-  style="background-color: #eaecf0;"
+|  $0000 - $0e87  ||  ...  ||  ...  ||  ???
 |-
-!  colspan="6"  |  
+|  $0e88  ||  byte  ||  Map  ||  [[Final Fantasy: Mystic Quest/Values#Maps|Map ID]]
 |-
-|  $0e9b  ||  byte  ||  Settings  ||  Message Speed - $00-$06 is 1-7
+|  $0e89  ||  byte  ||  Map  ||  Player X coordinate on map
+|-
+|  $0e8a  ||  byte  ||  Map  ||  Player Y coordinate on map
+|-
+|  $0e8b  ||  byte  ||  Map  ||  [[Final Fantasy: Mystic Quest/Values#Player_Facing_Directions|Player Facing Direction]]
+|-  style="background-color: #eaecf0;"
+|  $0e8c - $0e9a  ||  ...  ||  ...  ||  ???
+|-
+|  $0e9b  ||  byte  ||  Settings  ||  [[Final Fantasy: Mystic Quest/Values#Message_Speed|Message Speed]]
 |-
 |  $0e9c - $0e9d  ||  word  ||  Settings  ||  [[Final Fantasy: Mystic Quest (SNES)/Values/Window_Colors|Window Color]]
 |-
-|  $0e9e  ||  byte  ||  ...  ||  ???
+|  $0e9e  ||  byte  ||  Items  ||  Cure Potion's [[Final Fantasy: Mystic Quest/Values#Items|Item Number]] ($10)
 |-
-|  $0e9f  ||  byte  ||  Items  ||  # of cures
+|  $0e9f  ||  byte  ||  Items  ||  Amount of Cure Potions
+|-
+|  $0e9e  ||  byte  ||  Items  ||  Heal Potion's [[Final Fantasy: Mystic Quest/Values#Items|Item Number]] ($11)
+|-
+|  $0e9f  ||  byte  ||  Items  ||  Amount of Heal Potions
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  
+|-
+|  $0ea0  ||  byte  ||  Items  ||  Seed's [[Final Fantasy: Mystic Quest/Values#Items|Item Number]] ($12)
+|-
+|  $0ea1  ||  byte  ||  Items  ||  Amount of Seeds
+|-
+|  $0ea2  ||  byte  ||  Items  ||  Refresher's [[Final Fantasy: Mystic Quest/Values#Items|Item Number]] ($13)
+|-
+|  $0ea3  ||  byte  ||  Items  ||  Amount of Refreshers
 |-  style="background-color: #eaecf0;"
-|  $0ea0 - $0ec5  ||  ...  ||  ...  !!  ???
+|  $0ea4 - $0ebc  ||  ...  ||  ...  ||  ???
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $00 -->
+|-  style="background-color: #eaecf0;"
+|  $0ebd # 0000_0001  ||  bit  ||  Chests  ||  ...
+|-
+|  $0ebd # 0000_0010  ||  bit  ||  Chests  ||  Foresta - top right house, red chest - Cure Magic Spell (0=>taken, 1=>available)
+|-  style="background-color: #eaecf0;"
+|  $0ebd # 0000_0100  ||  bit  ||  Chests  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $0ebd # 0000_1000  ||  bit  ||  Chests  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $0ebd # 0001_0000  ||  bit  ||  Chests  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $0ebd # 0010_0000  ||  bit  ||  Chests  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $0ebd # 0100_0000  ||  bit  ||  Chests  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $0ebd # 1000_0000  ||  bit  ||  Chests  ||  ...
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  
+|-  style="background-color: #eaecf0;"
+|  $0ebe - $0ec5  ||  ...  ||  ...  ||  ???
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $00 -->
 |-
 |  $0ec6 % 0000 0001  ||  bit  ||    ||  
 |-
@@ -39,82 +89,255 @@
 |-
 |  $0ec6 % 1000 0000  ||  bit  ||  Settings  ||  Life Indicate - 0 => Scale, 1 => Figure
 |-
-|  $1000 - $1007  ||  8 bytes  ||  Character 1  !!  Name
+|  colspan="4" style="background-color: #eaecf0;"  |  
+|-
+|  $1000 - $1007  ||  8 bytes  ||  Player  ||  Name
 |-  style="background-color: #eaecf0;"
-|  $1008 - $100f  ||  8 bytes  ||  Character 1  !!  ???
+|  $1008 - $100f  ||  8 bytes  ||  Player  ||  ???
 |-
-|  $1010  ||  byte  ||  Character 1  ||  Level (Max: 99)
+|  $1010  ||  byte  ||  Player  ||  Level (Max: 99)
 |-
-|  $1011 - $1013  ||  long  ||  Character 1  ||  Experience (Max: 9999999)
+|  $1011 - $1013  ||  long  ||  Player  ||  Experience (Max: 9999999)
 |-
-|  $1014 - $1015  ||  word  ||  Character 1  ||  Current HP (Max: $ffff)
+|  $1014 - $1015  ||  word  ||  Player  ||  Current HP (Max: $ffff)
 |-
-|  $1016 - $1017  ||  word  ||  Character 1  ||  Max HP (Max: $ffff)
+|  $1016 - $1017  ||  word  ||  Player  ||  Max HP (Max: $ffff)
 |-
-|  $1018  ||  byte  ||  Character 1  || Current White Magic Points
+|  $1018  ||  byte  ||  Player  ||  Current White Magic Points
 |-
-|  $1019  ||  byte  ||  Character 1  || Current Black Magic Points
+|  $1019  ||  byte  ||  Player  ||  Current Black Magic Points
 |-
-|  $101a  ||  byte  ||  Character 1  || Current Wizard Magic Points
+|  $101a  ||  byte  ||  Player  ||  Current Wizard Magic Points
 |-
-|  $101b  ||  byte  ||  Character 1  || Max White Magic Points
+|  $101b  ||  byte  ||  Player  ||  Max White Magic Points
 |-
-|  $101c  ||  byte  ||  Character 1  || Max Black Magic Points
+|  $101c  ||  byte  ||  Player  ||  Max Black Magic Points
 |-
-|  $101d  ||  byte  ||  Character 1  || Max Wizard Magic Points
+|  $101d  ||  byte  ||  Player  ||  Max Wizard Magic Points
 |-  style="background-color: #eaecf0;"
-|  $101e - $1020  ||  long  ||  Character 1  ||  ???
+|  $101e - $1020  ||  long  ||  Player  ||  ???
 |-
-|  $1021  ||  byte  ||  Character 1  ||  Status
+|  $1021  ||  byte  ||  Player  ||  [[Final Fantasy: Mystic Quest/Values#Status|Status]]
 |-
-|  $1022  ||  byte  ||  Character 1  ||  Current Attack (Max: 99) - Not what is shown in Status menu
+|  $1022  ||  byte  ||  Player  ||  Current Attack (Max: 99) - Not what is shown in Status menu
 |-
-|  $1023  ||  byte  ||  Character 1  ||  Current Defense (Max: 99)
+|  $1023  ||  byte  ||  Player  ||  Current Defense (Max: 99)
 |-
-|  $1024  ||  byte  ||  Character 1  ||  Current Speed (Max: 99)
+|  $1024  ||  byte  ||  Player  ||  Current Speed (Max: 99)
 |-
-|  $1025  ||  byte  ||  Character 1  ||  Current Magic (Max: 99)
+|  $1025  ||  byte  ||  Player  ||  Current Magic (Max: 99)
 |-
-|  $1026  ||  byte  ||  Character 1  ||  Base Attack (Max: 99)
+|  $1026  ||  byte  ||  Player  ||  Base Attack (Max: 99)
 |-
-|  $1027  ||  byte  ||  Character 1  ||  Base Defense (Max: 99)
+|  $1027  ||  byte  ||  Player  ||  Base Defense (Max: 99)
 |-
-|  $1028  ||  byte  ||  Character 1  ||  Base Speed (Max: 99)
+|  $1028  ||  byte  ||  Player  ||  Base Speed (Max: 99)
 |-
-|  $1029  ||  byte  ||  Character 1  ||  Base Magic (Max: 99)
+|  $1029  ||  byte  ||  Player  ||  Base Magic (Max: 99)
 |-
-|  $1030  ||  byte  ||  Character 1  ||  Weapon Ammo Count
+|  $102a  ||  byte  ||  ...  ||  
 |-
-|  $1031  ||  byte  ||  Character 1  ||  Weapon ID
-
-
-
+|  $102b  ||  byte  ||  ...  ||  
 |-
-|  $1050 - $109f  ||  $50  ||  Character 2
+|  $102c  ||  byte  ||  ...  ||  
 |-
-|  $10a0 - $10a2  ||  3  ||  Gold (Max: 9999999)
-|-  style="background-color:#EAECF0;"
-|  $10a3 - $10a4  ||  2  ||  ???
+|  $102d  ||  byte  ||  ...  ||  
 |-
-|  $10a5  ||  1  ||  Player X
+|  $102e  ||  byte  ||  ...  ||  
 |-
-|  $10a6  ||  1  ||  Player Y
+|  $102f  ||  byte  ||  ...  ||  
 |-
-|  $10a7  ||  1  ||  Player Facing
-|-  style="background-color:#EAECF0;"
-|  $10a8 - $10ac  ||  5  ||  ???
+|  colspan="4" style="background-color: #eaecf0;"  |  
 |-
-|  $10ad  ||  1  ||  Map ID
-|-  style="background-color:#EAECF0;"
-|  $10ae - $10b2  ||  5  ||  ???
+|  $1030  ||  byte  ||  Player  ||  Weapon Ammo Count (Max: 99)
 |-
-|  $10b3 - $10b5  ||  3  ||  Play Time (0xSSMMHH)
-|-  style="background-color:#EAECF0;"
-|  $10b6 - $10ba ||  5  ||  ???
+|  $1031  ||  byte  ||  Player  ||  [[Final Fantasy: Mystic Quest/Values#Weapons|Weapon ID]]
 |-
-|  $10bb  ||  1  ||  # of cures
-|-  style="background-color:#EAECF0;"
-|  $10bc - $138b  ||  $2ca  ||  ???
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $ff -->
+|-
+|  $1032 # 0000_0001  ||  bit  ||  Player  ||  Weapons - Charm Claw
+|-
+|  $1032 # 0000_0010  ||  bit  ||  Player  ||  Weapons - Cat Claw
+|-
+|  $1032 # 0000_0100  ||  bit  ||  Player  ||  Weapons - Giant's Axe
+|-
+|  $1032 # 0000_1000  ||  bit  ||  Player  ||  Weapons - Battle Axe
+|-
+|  $1032 # 0001_0000  ||  bit  ||  Player  ||  Weapons - Axe
+|-
+|  $1032 # 0010_0000  ||  bit  ||  Player  ||  Weapons - Excalibur
+|-
+|  $1032 # 0100_0000  ||  bit  ||  Player  ||  Weapons - Knight Sword
+|-
+|  $1032 # 1000_0000  ||  bit  ||  Player  ||  Weapons - Steel Sword
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $f0 -->
+|-  style="background-color: #eaecf0;"
+|  $1033 # 0000_0001  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1033 # 0000_0010  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1033 # 0000_0100  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1033 # 0000_1000  ||  bit  ||  ...  ||  ...
+|-
+|  $1033 # 0001_0000  ||  bit  ||  Player  ||  Weapons - Mega Grenade
+|-
+|  $1033 # 0010_0000  ||  bit  ||  Player  ||  Weapons - Jumbo Bomb
+|-
+|  $1033 # 0100_0000  ||  bit  ||  Player  ||  Weapons - Bomb
+|-
+|  $1033 # 1000_0000  ||  bit  ||  Player  ||  Weapons - Dragon Claw
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $00 -->
+|-  style="background-color: #eaecf0;"
+|  $1034 # 0000_0001  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1034 # 0000_0010  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1034 # 0000_0100  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1034 # 0000_1000  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1034 # 0001_0000  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1034 # 0010_0000  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1034 # 0100_0000  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1034 # 1000_0000  ||  bit  ||  ...  ||  ...
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $fb -->
+|-
+|  $1035 # 0000_0001  ||  bit  ||  Player  ||  Armor - Steel Armor
+|-
+|  $1035 # 0000_0010  ||  bit  ||  Player  ||  Armor - Apollo Helm
+|-
+|  $1035 # 0000_0100  ||  bit  ||  Player  ||  Armor - Moon Helm
+|-
+|  $1035 # 0000_1000  ||  bit  ||  Player  ||  Armor - Steel Helm
+|-  style="background-color: #eaecf0;"
+|  $1035 # 0001_0000  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1035 # 0010_0000  ||  bit  ||  ...  ||  ...
+|-
+|  $1035 # 0100_0000  ||  bit  ||  Player  ||  Armor - Gaia's Armor
+|-
+|  $1035 # 1000_0000  ||  bit  ||  Player  ||  Armor - Noble Armor
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $3b -->
+|-
+|  $1036 # 0000_0001  ||  bit  ||  Player  ||  Armor - Magic Ring
+|-
+|  $1036 # 0000_0010  ||  bit  ||  Player  ||  Armor - Charm
+|-  style="background-color: #eaecf0;"
+|  $1036 # 0000_0100  ||  bit  ||  ...  ||  ...
+|-
+|  $1036 # 0000_1000  ||  bit  ||  Player  ||  Armor - Aegis Shield
+|-
+|  $1036 # 0001_0000  ||  bit  ||  Player  ||  Armor - Venus Shield
+|-
+|  $1036 # 0010_0000  ||  bit  ||  Player  ||  Armor - Steel Shield
+|-  style="background-color: #eaecf0;"
+|  $1036 # 0100_0000  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1036 # 1000_0000  ||  bit  ||  ...  ||  ...
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $80 -->
+|-  style="background-color: #eaecf0;"
+|  $1037 # 0000_0001  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1037 # 0000_0010  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1037 # 0000_0100  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1037 # 0000_1000  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1037 # 0001_0000  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1037 # 0010_0000  ||  bit  ||  ...  ||  ...
+|-  style="background-color: #eaecf0;"
+|  $1037 # 0100_0000  ||  bit  ||  ...  ||  ...
+|-
+|  $1037 # 1000_0000  ||  bit  ||  Player  ||  Armor - Cupid Locket
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $ff -->
+|-
+|  $1038 # 0000_0001  ||  bit  ||  Player  ||  Black Magic - Aero
+|-
+|  $1038 # 0000_0010  ||  bit  ||  Player  ||  Black Magic - Fire
+|-
+|  $1038 # 0000_0100  ||  bit  ||  Player  ||  Black Magic - Blizzard
+|-
+|  $1038 # 0000_1000  ||  bit  ||  Player  ||  Black Magic - Quake
+|-
+|  $1038 # 0001_0000  ||  bit  ||  Player  ||  White Magic - Life
+|-
+|  $1038 # 0010_0000  ||  bit  ||  Player  ||  White Magic - Heal
+|-
+|  $1038 # 0100_0000  ||  bit  ||  Player  ||  White Magic - Cure
+|-
+|  $1038 # 1000_0000  ||  bit  ||  Player  ||  White Magic - Exit
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $f0 -->
+|-  style="background-color: #eaecf0;"
+|  $1039 # 0000_0001  ||  bit  ||  ...  ||  
+|-  style="background-color: #eaecf0;"
+|  $1039 # 0000_0010  ||  bit  ||  ...  ||  
+|-  style="background-color: #eaecf0;"
+|  $1039 # 0000_0100  ||  bit  ||  ...  ||  
+|-  style="background-color: #eaecf0;"
+|  $1039 # 0000_1000  ||  bit  ||  ...  ||  
+|-
+|  $1039 # 0001_0000  ||  bit  ||  Player  ||  Wizard Magic - Flare
+|-
+|  $1039 # 0010_0000  ||  bit  ||  Player  ||  Wizard Magic - Meteor
+|-
+|  $1039 # 0100_0000  ||  bit  ||  Player  ||  Wizard Magic - White
+|-
+|  $1039 # 1000_0000  ||  bit  ||  Player  ||  Wizard Magic - Thunder
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  
+|-  style="background-color: #eaecf0;"
+|  $1040 - $10b7  ||  ...  ||  ...  ||  ???
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $ff -->
+|-
+|  $10b8 # 0000_0001  ||  bit  ||  Companion  ||  Black Magic - Aero
+|-
+|  $10b8 # 0000_0010  ||  bit  ||  Companion  ||  Black Magic - Fire
+|-
+|  $10b8 # 0000_0100  ||  bit  ||  Companion  ||  Black Magic - Blizzard
+|-
+|  $10b8 # 0000_1000  ||  bit  ||  Companion  ||  Black Magic - Quake
+|-
+|  $10b8 # 0001_0000  ||  bit  ||  Companion  ||  White Magic - Life
+|-
+|  $10b8 # 0010_0000  ||  bit  ||  Companion  ||  White Magic - Heal
+|-
+|  $10b8 # 0100_0000  ||  bit  ||  Companion  ||  White Magic - Cure
+|-
+|  $10b8 # 1000_0000  ||  bit  ||  Companion  ||  White Magic - Exit
+|-
+|  colspan="4" style="background-color: #eaecf0;"  |  <!-- All: $f0 -->
+|-  style="background-color: #eaecf0;"
+|  $10b9 # 0000_0001  ||  bit  ||  ...  ||  
+|-  style="background-color: #eaecf0;"
+|  $10b9 # 0000_0010  ||  bit  ||  ...  ||  
+|-  style="background-color: #eaecf0;"
+|  $10b9 # 0000_0100  ||  bit  ||  ...  ||  
+|-  style="background-color: #eaecf0;"
+|  $10b9 # 0000_1000  ||  bit  ||  ...  ||  
+|-
+|  $10b9 # 0001_0000  ||  bit  ||  Companion  ||  Wizard Magic - Flare
+|-
+|  $10b9 # 0010_0000  ||  bit  ||  Companion  ||  Wizard Magic - Meteor
+|-
+|  $10b9 # 0100_0000  ||  bit  ||  Companion  ||  Wizard Magic - White
+|-
+|  $10b9 # 1000_0000  ||  bit  ||  Companion  ||  Wizard Magic - Thunder
+|-  style="background-color: #eaecf0;"
+|  $10ba - $1fff  ||  ...  ||  ...  ||  ???
 |}
 
 =Related=
