--- a/Final Fantasy Mystic Quest (SNES)/Wiki/Final Fantasy Mystic Quest (SNES) - Values.wikitext
+++ b/Final Fantasy Mystic Quest (SNES)/Wiki/Final Fantasy Mystic Quest (SNES) - Values.wikitext
@@ -2,6 +2,479 @@
 
 =Values=
 
+==Items==
+
+{| class="wikitable sortable"
+|-
+!  Value  !!  Category  !!  Description
+|-
+|  style="text-align: center;"  |  $00  ||  Quest Item  ||  Elixir
+|-
+|  style="text-align: center;"  |  $01  ||  Quest Item  ||  Tree Wither
+|-
+|  style="text-align: center;"  |  $02  ||  Quest Item  ||  Wakewater
+|-
+|  style="text-align: center;"  |  $03  ||  Quest Item  ||  Venus Key
+|-
+|  style="text-align: center;"  |  $04  ||  Quest Item  ||  Multi-Key
+|-
+|  style="text-align: center;"  |  $05  ||  Quest Item  ||  Mask
+|-
+|  style="text-align: center;"  |  $06  ||  Quest Item  ||  Magic Mirror
+|-
+|  style="text-align: center;"  |  $07  ||  Quest Item  ||  Thunder Rock
+|-
+|  style="text-align: center;"  |  $08  ||  Quest Item  ||  Captain Cap
+|-
+|  style="text-align: center;"  |  $09  ||  Quest Item  ||  Libra Crest
+|-
+|  style="text-align: center;"  |  $0a  ||  Quest Item  ||  Gemini Crest
+|-
+|  style="text-align: center;"  |  $0b  ||  Quest Item  ||  Mobius Crest
+|-
+|  style="text-align: center;"  |  $0c  ||  Quest Item  ||  Sand Coin
+|-
+|  style="text-align: center;"  |  $0d  ||  Quest Item  ||  River Coin
+|-
+|  style="text-align: center;"  |  $0e  ||  Quest Item  ||  Sun Coin
+|-
+|  style="text-align: center;"  |  $0f  ||  Quest Item  ||  Sky Coin
+|-
+|  colspan="3"  |  
+|-
+|  style="text-align: center;"  |  $10  ||  Item  ||  Cure Potion
+|-
+|  style="text-align: center;"  |  $11  ||  Item  ||  Heal Potion
+|-
+|  style="text-align: center;"  |  $12  ||  Item  ||  Seed
+|-
+|  style="text-align: center;"  |  $13  ||  Item  ||  Refresher
+|-
+|  style="text-align: center;"  |  $14  ||  Magic  ||  White - Exit
+|-
+|  style="text-align: center;"  |  $15  ||  Magic  ||  White - Cure
+|-
+|  style="text-align: center;"  |  $16  ||  Magic  ||  White - Heal
+|-
+|  style="text-align: center;"  |  $17  ||  Magic  ||  White - Life
+|-
+|  style="text-align: center;"  |  $18  ||  Magic  ||  Black - Quake
+|-
+|  style="text-align: center;"  |  $19  ||  Magic  ||  Black - Blizzard
+|-
+|  style="text-align: center;"  |  $1a  ||  Magic  ||  Black - Fire
+|-
+|  style="text-align: center;"  |  $1b  ||  Magic  ||  Black - Aero
+|-
+|  style="text-align: center;"  |  $1c  ||  Magic  ||  Wizard - Thunder
+|-
+|  style="text-align: center;"  |  $1d  ||  Magic  ||  Wizard - White
+|-
+|  style="text-align: center;"  |  $1e  ||  Magic  ||  Wizard - Meteor
+|-
+|  style="text-align: center;"  |  $1f  ||  Magic  ||  Wizard - Flare
+|-
+|  colspan="3"  |  
+|-
+|  style="text-align: center;"  |  $20  ||  Weapons  ||  Steel Sword
+|-
+|  style="text-align: center;"  |  $21  ||  Weapons  ||  Knight Sword
+|-
+|  style="text-align: center;"  |  $22  ||  Weapons  ||  Excalibur
+|-
+|  style="text-align: center;"  |  $23  ||  Weapons  ||  Axe
+|-
+|  style="text-align: center;"  |  $24  ||  Weapons  ||  Battle Axe
+|-
+|  style="text-align: center;"  |  $25  ||  Weapons  ||  Giant's Axe
+|-
+|  style="text-align: center;"  |  $26  ||  Weapons  ||  Cat Claw
+|-
+|  style="text-align: center;"  |  $27  ||  Weapons  ||  Charm Claw
+|-
+|  style="text-align: center;"  |  $28  ||  Weapons  ||  Dragon Claw
+|-
+|  style="text-align: center;"  |  $29  ||  Weapons  ||  Bomb
+|-
+|  style="text-align: center;"  |  $2a  ||  Weapons  ||  Jumbo Bomb
+|-
+|  style="text-align: center;"  |  $2b  ||  Weapons  ||  Mega Grenade
+|-
+|  style="text-align: center;"  |  $2c  ||  Weapons  ||  Morning Star
+|-
+|  style="text-align: center;"  |  $2d  ||  Weapons  ||  Bow of Grace
+|-
+|  style="text-align: center;"  |  $2e  ||  Weapons  ||  Ninja Star
+|-
+|  style="text-align: center;"  |  $2f  ||  Armor  ||  Steel Helm
+|-
+|  colspan="3"  |  
+|-
+|  style="text-align: center;"  |  $30  ||  Armor  ||  Moon Helm
+|-
+|  style="text-align: center;"  |  $31  ||  Armor  ||  Apollo Helm
+|-
+|  style="text-align: center;"  |  $32  ||  Armor  ||  Steel Armor
+|-
+|  style="text-align: center;"  |  $33  ||  Armor  ||  Noble Armor
+|-
+|  style="text-align: center;"  |  $34  ||  Armor  ||  Gaia's Armor
+|-
+|  style="text-align: center;"  |  $35  ||  Armor  ||  Relica Armor
+|-
+|  style="text-align: center;"  |  $36  ||  Armor  ||  Mystic Robe
+|-
+|  style="text-align: center;"  |  $37  ||  Armor  ||  Flame Armor
+|-
+|  style="text-align: center;"  |  $38  ||  Armor  ||  Black Robe
+|-
+|  style="text-align: center;"  |  $39  ||  Armor  ||  Steel Shield
+|-
+|  style="text-align: center;"  |  $3a  ||  Armor  ||  Venus Shield
+|-
+|  style="text-align: center;"  |  $3b  ||  Armor  ||  Aegis Shield
+|-
+|  style="text-align: center;"  |  $3c  ||  Armor  ||  Ether Shield
+|-
+|  style="text-align: center;"  |  $3d  ||  Armor  ||  Charm
+|-
+|  style="text-align: center;"  |  $3e  ||  Armor  ||  Magic Ring
+|-
+|  style="text-align: center;"  |  $3f  ||  Armor  ||  Cupid Locket
+|-
+|  colspan="3"  |  
+|-
+|  style="text-align: center;"  |  $ff   ||  Item  ||  No Item
+|}
+
+==Maps==
+
+{| class="wikitable sortable"
+|-
+!  Value  !!  Worldmap X  !!  Worldmap Y  !!  Description
+|-
+|  style="text-align: center;"  |  $00  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $01  ||  style="text-align: center;"  |  $0e  ||  style="text-align: center;"  |  $23  ||  Battlefield #1 - North of Level Forest
+|-
+|  style="text-align: center;"  |  $02  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $03  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $04  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $05  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $06  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $07  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $08  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $09  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $0a  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $0b  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $0c  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $0d  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $0e  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $0f  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $10  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $11  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $12  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $13  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $14  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $15  ||  style="text-align: center;"  |  $...  ||  style="text-align: center;"  |  $...  ||  
+|-
+|  style="text-align: center;"  |  $16  ||  style="text-align: center;"  |  $0e  ||  style="text-align: center;"  |  $28  ||  Level Forest
+|-
+|  style="text-align: center;"  |  $17  ||  style="text-align: center;"  |  $12  ||  style="text-align: center;"  |  $26  ||  Foresta
+|-
+|  style="text-align: center;"  |  $18  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $19  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $1a  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $1b  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $1c  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $1d  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $1e  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $1f  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $20  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $21  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $22  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $23  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $24  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $25  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $26  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $27  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $28  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $29  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $2a  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $2b  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $2c  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $2d  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $2e  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $2f  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $30  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $31  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $32  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $33  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $34  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $35  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $36  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $37  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $38  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $39  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $3a  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $3b  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $3c  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $3d  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $3e  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $3f  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $40  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $41  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $42  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $43  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $44  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $45  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $46  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $47  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $48  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $49  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $4a  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $4b  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $4c  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $4d  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $4e  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $4f  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $50  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $51  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $52  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $53  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $54  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $55  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $56  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $57  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $58  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $59  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $5a  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $5b  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $5c  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $5d  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $5e  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $5f  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $60  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $61  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $62  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $63  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $64  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $65  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $66  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $67  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $68  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $69  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $6a  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $6b  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $6c  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $6d  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $6e  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $6f  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $70  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $71  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $72  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $73  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $74  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $75  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $76  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $77  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $78  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $79  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $7a  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $7b  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $7c  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $7d  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $7e  ||  style="text-align: center;"  |  
+|-
+|  style="text-align: center;"  |  $7f  ||  style="text-align: center;"  |  
+
+|}
+
+==Message Speed==
+
+{| class="wikitable"
+!  Value  !!  Description
+|-
+|  style="text-align: center;"  |  $00  ||  1
+|-
+|  style="text-align: center;"  |  $01  ||  2
+|-
+|  style="text-align: center;"  |  $02  ||  3
+|-
+|  style="text-align: center;"  |  $03  ||  4
+|-
+|  style="text-align: center;"  |  $04  ||  5
+|-
+|  style="text-align: center;"  |  $05  ||  6
+|-
+|  style="text-align: center;"  |  $06  ||  7
+|}
+
+==Player Facing Directions==
+
+{| class="wikitable"
+!  Value  !!  Description
+|-
+|  style="text-align: center;"  |  $00  ||  Up
+|-
+|  style="text-align: center;"  |  $01  ||  Right
+|-
+|  style="text-align: center;"  |  $02  ||  Down
+|-
+|  style="text-align: center;"  |  $03  ||  Left
+|}
+
+==Weapons==
+
+{| class="wikitable"
+!  Value  !!  Description
+|-
+|  style="text-align: center;"  |  $20  ||  Steel Sword
+|-
+|  style="text-align: center;"  |  $21  ||  Knight Sword
+|-
+|  style="text-align: center;"  |  $22  ||  Excalibur
+|-
+|  style="text-align: center;"  |  $23  ||  Axe
+|-
+|  style="text-align: center;"  |  $24  ||  Battle Axe
+|-
+|  style="text-align: center;"  |  $25  ||  Giant's Axe
+|-
+|  style="text-align: center;"  |  $26  ||  Cat Claw
+|-
+|  style="text-align: center;"  |  $27  ||  Charm Claw
+|-
+|  style="text-align: center;"  |  $28  ||  Dragon Claw
+|-
+|  style="text-align: center;"  |  $29  ||  Bomb
+|-
+|  style="text-align: center;"  |  $2a  ||  Jumbo Bomb
+|-
+|  style="text-align: center;"  |  $2b  ||  Mega Grenade
+|}
+
 ==Window Colors==
 
 [[Final Fantasy: Mystic Quest (SNES)/Values/Window_Colors|Window Colors]]
